cmake_minimum_required(VERSION 3.23)

project(main)
set(CMAKE_CXX_STANDARD 14)
add_executable(main main.cpp)

project(populating)
set(CMAKE_CXX_STANDARD 14)
add_executable(populating populating.cpp)

project(impossible)
set(CMAKE_CXX_STANDARD 14)
add_executable(impossible impossible.cpp)

project(manipulating)
set(CMAKE_CXX_STANDARD 14)
add_executable(manipulating manipulating.cpp)

project(shift)
set(CMAKE_CXX_STANDARD 14)
add_executable(shift shift.cpp)

project(repetition)
set(CMAKE_CXX_STANDARD 14)
add_executable(repetition repetitionCounter.cpp)

project(naive)
set(CMAKE_CXX_STANDARD 14)
add_executable(naive naive_sort.cpp)

project(bubble_sort)
set(CMAKE_CXX_STANDARD 14)
add_executable(bubble_sort ordering_bubble_sort.cpp)

project(vector)
set(CMAKE_CXX_STANDARD 14)
add_executable(vector vector.cpp)

project(vector_bis)
set(CMAKE_CXX_STANDARD 14)
add_executable(vector_bis vector_bis.cpp)

project(esercizio_23)
set(CMAKE_CXX_STANDARD 14)
add_executable(esercizio_23 esercizio_23.cpp)

project(esercizio_18)
set(CMAKE_CXX_STANDARD 14)
add_executable(esercizio_18 esercizio_18.cpp)

project(struct)
set(CMAKE_CXX_STANDARD 14)
add_executable(struct struct.cpp)

project(char)
set(CMAKE_CXX_STANDARD 14)
add_executable(char char.cpp)

project(string)
set(CMAKE_CXX_STANDARD 14)
add_executable(string string.cpp)

project(string_as_array)
set(CMAKE_CXX_STANDARD 14)
add_executable(string_as_array string_as_array.cpp)

project(string_manipulation)
set(CMAKE_CXX_STANDARD 14)
add_executable(string_manipulation string_manipulation.cpp)

project(string_substring)
set(CMAKE_CXX_STANDARD 14)
add_executable(string_substring string_substring.cpp)

project(pointers_intro)
set(CMAKE_CXX_STANDARD 14)
add_executable(pointers_intro pointers_intro.cpp)

project(pointers_example_1)
set(CMAKE_CXX_STANDARD 14)
add_executable(pointers_example_1 pointers_example_1.cpp)


project(pointers_memory_leak)
set(CMAKE_CXX_STANDARD 14)
add_executable(pointers_memory_leak pointers_memory_leak.cpp)

project(pointers_functions)
set(CMAKE_CXX_STANDARD 14)
add_executable(pointers_functions pointers_functions.cpp)

project(pointers_arrays)
set(CMAKE_CXX_STANDARD 14)
add_executable(pointers_arrays pointers_arrays.cpp)